<resources>
    <string name="app_name">Kicksound</string>
    <string name="email_text">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="register">S\'enregistrer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="firstname">Prénom</string>
    <string name="Lastname">Nom</string>
    <string name="password_verification">Vérification du mot de passe</string>
    <string name="validate">Valider</string>
    <string name="fill_all_fields">Veuillez saisir tous les champs</string>
    <string name="password_are_different">Les mots de passe ne sont pas identiques</string>
    <string name="URL_API">"http://kicksoundapi.ddns.net:3000/api/"</string>
    <string name="account_created">Votre compte a bien été créé</string>
    <string name="wrong_mail">Email invalide !</string>
    <string name="connexion_error">Une erreur est survenue, veuilliez vérifier votre connexion internet.</string>
    <string name="connection_failed">Combinaison email - mot de passe inccorect.</string>
    <string name="USER_PREF">USER_PREF</string>
    <string name="userAccessToken">userAccessToken</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search">Recherche</string>
    <string name="events">Événements</string>
    <string name="lives">En direct</string>
    <string name="library">Bibliothèque</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_error">Une erreur est survenue. Code (Account)</string>
    <string name="logout">Logout</string>
    <string name="change_password">Changer de mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="password_modification_success">Le mot de passe à été modifié avec succès !</string>
    <string name="eventName">Nom de l\'évènement</string>
    <string name="username">Username</string>
    <string name="create_event">Création d\'un évènement</string>
    <string name="event_description">Description de l\'évènement</string>
    <string name="placeNumber">Nombre de place</string>
    <string name="add_event_picture">Ajouter une photo à l\'évènement</string>
    <string name="succes_create_event">Evènement créé avec succès</string>
    <string name="createEventError">Une erreur est survenue</string>
    <string name="error_upload_image">Problème lors de l\'upload</string>
    <string name="search_user">Rechercher un utilisateur</string>
    <string name="user_pic">Changer votre photo de profil</string>
    <string name="changeUserPic">Sélectionner une photo de profil</string>
    <string name="success_picture_user">Votre photo de profil a été mise à jour</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="chose_event_date">Choisissez une date pour votre évènement</string>
    <string name="you_must_select_event_date">Veuillez saisir une date</string>
    <string name="my_events">Mes évènements</string>
    <string name="updateEventError">Problème lors de la mise à jour de l\'évènement</string>
    <string name="eventModificationSuccess">L\'évènement a été modifié avec succès</string>
    <string name="kicksound_dns">http://kicksoundapi.ddns.net:3000/</string>
    <string name="search_event">Rechercher un évènement</string>
    <string name="participateToEvent">Participer à l\'évènement</string>
    <string name="stopParticipate">Ne plus participer</string>
    <string name="participateToEventText">Vous participez à l\'évènement</string>
    <string name="dontParticipateToEvent">Vous ne participez plus à l\'évènement</string>
    <string name="showParticipants">Voir les participants</string>
    <string name="participants">Participants</string>
    <string name="notEnoughTickets">Il n\'y a plus de place pour cette évènement</string>
    <string name="my_participations">Mes participations</string>
    <string name="eventByFollowedArtist">Evènements des artistes suivis</string>
    <string name="noEventCreated">Vous n\'avez créé aucun évènement.</string>
    <string name="noEventCreatedByFollowedArtists">Aucun évènement n\'a été créé par les artistes que vous suivez.</string>
    <string name="noParticipation">Vous ne participez à aucun évènement.</string>
    <string name="noParticipant">Aucun participant</string>
    <string name="playlists">Vos playlists</string>
    <string name="albums">Albums</string>
    <string name="titles">Titres</string>
    <string name="discover">Découverte</string>
    <string name="createYourPlaylist">Créer votre playlist</string>
    <string name="successfullyCreatePlaylist">Playlist créée avec succès</string>
    <string name="noPlaylist">Vous n\'avez aucune playlist.</string>
    <string name="importMusic">Importer une musique</string>
    <string name="successfullyAddMusic">Musique ajoutée avec succès.</string>
    <string name="hisSongs">Ses titres</string>
    <string name="addSong">Ajouter un titre</string>
    <string name="artistUpload">Mes imports</string>
    <string name="yourMusicName">Nom de votre musique (Pas obligatoire)</string>
    <string name="musicAddedToFavorites">Musique ajoutée à vos titres</string>
    <string name="musicRemoveFromFavorites">Musique supprimée de vos titres</string>
    <string name="addToPlaylist">Ajouter à une playlist</string>
    <string name="rate_this_music">Que pensez-vous de cette musique ?</string>
    <string name="newNote">Votre note a été prise en compte</string>
    <string name="rateThisSong">Notez cette musique</string>
    <string name="musicRemovedFromPlaylist">La musique a été retirée de la playlist</string>
    <string name="deletePlaylist">Playlist supprimée</string>
    <string name="highlight">Vous avez mis en avant cet artiste</string>
    <string name="artistsToDiscover"><u>Artistes qui pourraient vous intéresser</u></string>
    <string name="deleteMusic">Musique supprimée avec succes</string>
    <string name="live">Live</string>
    <string name="liveUrl">rtmp://live.kicksound.fr/live/</string>
</resources>
