<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlack"
    tools:context=".Controllers.Event.CreateEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/eventPicture"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/kicksound_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageButton
            android:id="@+id/addEventPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="8dp"
            android:translationX="-15dp"
            android:translationY="15dp"
            android:src="@drawable/ic_action_upload"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/eventPicture"
            app:layout_constraintStart_toEndOf="@+id/eventPicture" />

        <EditText
            android:id="@+id/eventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_action_event"
            android:drawablePadding="@dimen/drawable_padding"
            android:ems="10"
            android:hint="@string/eventName"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventPicture" />

        <EditText
            android:id="@+id/ticketNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/placeNumber"
            android:textColorHint="@color/colorWhite"
            android:drawableStart="@drawable/ic_action_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventName" />

        <EditText
            android:id="@+id/descriptionEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/event_description"
            android:inputType="textMultiLine"
            android:maxLength="255"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketNumber" />

        <ImageButton
            android:id="@+id/eventDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorLightBlack"
            android:src="@drawable/ic_action_plus_circle"
            app:layout_constraintBottom_toTopOf="@+id/createEventButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEvent" />

        <TextView
            android:id="@+id/choseEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/chose_event_date"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/createEventButton"
            app:layout_constraintStart_toEndOf="@+id/eventDate"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEvent" />

        <Button
            android:id="@+id/createEventButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorMainDark"
            android:text="@string/validate"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>